# py_load_eudravigilance

./: .dockerignore  .gitignore  Dockerfile  FRD_Compliance_Analysis.md  README.md  create_xxe_file.py  mkdocs.yml  pyproject.toml  schema.xsd
.github/workflows/: ci.yml
docs/: index.md
docs/architecture/: overview.md  schema.md
docs/developer_guide/: contributing.md  new_loader.md
docs/user_guide/: cli_usage.md  configuration.md  installation.md
src/py_load_eudravigilance/: __init__.py  base.py  bigquery.py  cli.py  config.py  databricks.py  interfaces.py  loader.py  parser.py  postgres.py  redshift.py  run.py  schema.py  transformer.py
tests/: invalid_sample_e2b.xml  mixed_validity_e2b.xml  sample_e2b.xml  test_cli.py  test_config.py  test_e2e.py  test_interfaces.py  test_loader.py  test_loader_integration.py  test_loader_scenarios.py  test_parser.py  test_parser_dos.py  test_parser_error_handling.py  test_parser_robustness.py  test_parser_robustness_extra.py  test_parser_security.py  test_parser_security_extra.py  test_run.py  test_transformer.py  test_validation.py
tests/data/: billion_laughs.xml  deeply_nested.xml  invalid_for_xsd.xml  malicious_error.xml  mixed_validity.xml  quadratic_blowup.xml  repeated_singleton_element.xml  test_amendment.xml  test_insert.xml  test_nullification.xml  test_stale_amendment.xml  test_xxe.xml  test_xxe_external.xml  valid_for_xsd.xml  xxe_target.txt
tests/schemas/: sample_schema.xsd  test_schema.xsd
