[tool.poetry]
name = "py_load_eudravigilance"
version = "0.1.0"
description = "High-performance ETL for EudraVigilance ICSRs into relational databases."
authors = ["Gowtham Rao <rao@ohdsi.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_load_eudravigilance", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.3"
pyyaml = "^6.0.1"
# Core dependencies are minimal. Others are optional extras.
fsspec = {version = "^2023.10.0", optional = true}
s3fs = {version = "^2023.10.0", optional = true}
gcsfs = {version = "^2023.10.0", optional = true}
azure-storage-blob = {version = "^12.18.2", optional = true}
psycopg2-binary = {version = "^2.9.9", optional = true}
sqlalchemy = {version = "^2.0.22", optional = true}
typer = {version = ">=0.9.0", optional = true}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.1.0"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"
testcontainers = {version = "^3.7.1", extras = ["postgres"]}


[tool.poetry.extras]
postgres = ["psycopg2-binary", "sqlalchemy"]
s3 = ["fsspec", "s3fs"]
gcs = ["fsspec", "gcsfs"]
azure = ["fsspec", "azure-storage-blob"]
cli = ["typer"]
all = ["psycopg2-binary", "sqlalchemy", "fsspec", "s3fs", "gcsfs", "azure-storage-blob", "typer"]


[tool.poetry.scripts]
eudravigloader = "py_load_eudravigilance.cli:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.main"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
