[project]
name = "py_load_eudravigilance"
version = "0.1.0"
description = "High-performance ETL for EudraVigilance ICSRs into relational databases."
authors = [
    {name = "Gowtham Rao", email = "rao@ohdsi.org"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "lxml>=4.9.3",
    "pyyaml>=6.0.1",
    "fsspec>=2023.10.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.22",
    "typer>=0.9.0",
    "oracledb"
]

[project.optional-dependencies]
s3 = ["s3fs>=2023.10.0"]
gcs = ["gcsfs>=2023.10.0"]
azure = ["azure-storage-blob>=12.18.2"]
oracle = ["oracledb"]
cli = []
all = [
    "s3fs>=2023.10.0",
    "gcsfs>=2023.10.0",
    "azure-storage-blob>=12.18.2",
    "oracledb"
]

[project.scripts]
eudravigloader = "py_load_eudravigilance.cli:app"

[project.entry-points."py_load_eudravigilance.loaders"]
postgresql = "py_load_eudravigilance.loader:PostgresLoader"

[tool.poetry]
packages = [{include = "py_load_eudravigilance", from = "src"}]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.2"
pytest-mock = ">=3.15.0"
ruff = ">=0.1.0"
black = ">=23.9.1"
isort = ">=5.12.0"
mypy = ">=1.5.1"
pytest-cov = ">=4.1.0"
testcontainers = {version = ">=3.7.1", extras = ["postgres"]}
mkdocs = ">=1.5.3"
mkdocs-material = ">=9.4.6"
deprecation = ">=2.1.0"
psycopg2-binary = ">=2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.main"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=src/py_load_eudravigilance --cov-report=term-missing --cov-report=html"
